@@ -6,3 +6,4 @@ doc/*
 rdoc/*
 rena_new_spec.html
 rena-*.gem
+/*.gemspec
