@@ -9,7 +9,7 @@ A set of compliant RDF parsers:
 
 Reddy is an RDF library for Ruby.
 
-== FEATURES/PROBLEMS:
+== FEATURES:
 Reddy parses RDF/XML, RDFa and N3-rdf into a Graph object. It also serializes RDF/XML and N-Triples from the Graph.
 
 * Fully compliant RDF/XML parser.
@@ -18,6 +18,9 @@ Reddy parses RDF/XML, RDFa and N3-rdf into a Graph object. It also serializes RD
 * N-Triples and RDF/XML serializer
 * RDFa tests use SPARQL for most tests due to Rasqal limitations. Other tests compare directly against N-triples.
 * Graph serializes into RDF/XML and N-Triples.
+* ConjunctiveGraph, named Graphs and contextual storage modules.
+
+Install with 'gem install gkellogg-reddy'
 
 == SYNOPSIS:
 
