@@ -3,20 +3,23 @@ begin
   gem 'jeweler'
   require 'jeweler'
   Jeweler::Tasks.new do |gemspec|
-    gemspec.name = "reddy"
+    gemspec.name = "gkellogg-reddy"
     gemspec.summary = "Reddy is an RDF library for Ruby."
     gemspec.description = <<-DESCRIPTION
-  Reddy parses RDF/XML, RDFa and N3-rdf into a Graph object. It also serializes RDF/XML and N-Triples from the Graph.
+    Reddy parses RDF/XML, RDFa and N3-rdf into a Graph object. It also serializes RDF/XML and N-Triples from the Graph.
 
       * Fully compliant RDF/XML parser.
       * Fully compliant XHTML/RDFa 1.0 parser.
       * N3-rdf parser
       * N-Triples and RDF/XML serializer
       * Graph serializes into RDF/XML and N-Triples.
+      * ConjunctiveGraph, named Graphs and contextual storage modules.
+    
+    Install with 'gem install gkellogg-reddy'
     DESCRIPTION
     gemspec.email = "gregg@kellogg-assoc.com"
-    gemspec.homepage = "http://github.com/tommorris/reddy"
-    gemspec.authors = ["Tom Morris", "Gregg Kellogg"]
+    gemspec.homepage = "http://github.com/gkellogg/reddy"
+    gemspec.authors = ["Gregg Kellogg", "Tom Morris"]
     gemspec.add_dependency('addressable', '>= 2.0.0')
     gemspec.add_dependency('treetop',  '>= 1.4.0')
     gemspec.add_dependency('libxml-ruby',  '>= 0.8.3')
@@ -24,7 +27,7 @@ begin
     gemspec.add_dependency('nokogiri', '>= 1.3.3')
     gemspec.add_dependency('builder', '>= 2.1.2')
     gemspec.add_development_dependency('rspec')
-    gemspec.add_development_dependency('activesupport', '>= 2.3.0')
+    gemspec.add_development_dependency('active_support', '>= 2.3.0')
     gemspec.extra_rdoc_files     = %w(README.rdoc History.txt)
   end
   Jeweler::GemcutterTasks.new
